--- a/index.html
+++ b/index.html
@@ -42,19 +42,19 @@
                     <td align="center">
                         <img src="images/cat.300.jpg" alt="Project 1" width="60%">
                         <br>
-                        <h3>Cute cat</h3>
+                        <h3>Project 1</h3>
                         <br>
                     </td>
                     <td align="center">
                         <img src="images/cat.300.jpg" alt="Project 2" width="60%">
                         <br>
-                        <h3>Cute cat</h3>
+                        <h3>Project 2</h3>
                         <br>
                     </td>
                     <td align="center">
                         <img src="images/cat.300.jpg" alt="Project 3" width="60%">
                         <br>
-                        <h3>Cute cat</h3>
+                        <h3>Project 3</h3>
                         <br>
                     </td>
                 </tr>
@@ -62,19 +62,19 @@
                     <td align="center">
                         <img src="images/cat.300.jpg" alt="Project 1" width="60%">
                         <br>
-                        <h3>Cute cat</h3>
+                        <h3>Project 4</h3>
                         <br>
                     </td>
                     <td align="center">
                         <img src="images/cat.300.jpg" alt="Project 2" width="60%">
                         <br>
-                        <h3>Cute cat</h3>
+                        <h3>Project 5</h3>
                         <br>
                     </td>
                     <td align="center">
                         <img src="images/cat.300.jpg" alt="Project 3" width="60%">
                         <br>
-                        <h3>Cute cat</h3>
+                        <h3>Project 6</h3>
                         <br>
                     </td>
                 </tr>
